force-app/main/default/objects/WhatsApp_Contact__c/WhatsApp_Contact__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Contact</label>
    <nameField>
        <displayFormat>WA-{0000}</displayFormat>
        <label>WhatsApp Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>