force-app/main/default/objects/WhatsApp_Contact__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>