force-app/main/default/objects/WhatsApp_Contact__c/fields/Last_Message_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Date__c</fullName>
    <label>Last Message Date</label>
    <type>DateTime</type>
</CustomField>