force-app/main/default/objects/WhatsApp_Contact__c/fields/Matched_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Type__c</fullName>
    <label>Matched Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unmatched</fullName>
                <default>true</default>
                <label>Unmatched</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>