force-app/main/default/objects/WhatsApp_Contact__c/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <label>Opt In Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Opted In</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>