force-app/main/default/objects/WhatsApp_Contact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This field stores the whatsapp Phone number which is unique and required</description>
    <inlineHelpText>Please enter the appropriate Whatsapp Number</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>