force-app/main/default/objects/WhatsApp_Contact__c/fields/Profile_Picture_Url__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_Url__c</fullName>
    <label>Profile Picture Url</label>
    <type>Url</type>
</CustomField>